# MFDBA-Lite

./: .env.test  .gitignore  MFDBA-Lite-full-snapshot-20260302-111121.md  MFDBA-Lite-full-snapshot-20260302-113745.md  MFDBA-Lite-snapshot-20260302-125145.md  MFDB_ENGINEERING_CONTRACT.md  README.md  from  git-updater.py  make-dump-simple.sh  make-dump.sh  project-dump.md  project-full-dump.md  provider_registry.py  pyproject.toml  requirements.txt  setup.py  snapshot-20260302-144054.md  snapshot-20260302-151938.md  snapshot-20260302-155535.md  snapshot-20260302-163352.md  snapshot-20260303-072729.md  snapshot-20260303-083736.md  snapshot-20260305-100456.md  snapshot-20260305-105715.md  snapshot-20260305-134545.md  snapshot-20260305-150914.md  snapshot-20260305-175903.md  snapshot-20260305-213544.md  snapshot-20260305-220934.md  snapshot-20260305-223521.md  snapshot-20260306-063221.md  snapshot-20260306-063534.md  snapshot-20260306-071000.md
config/: config.default.json
mfdballm/: __init__.py  builder.py  cli.py  config.py  config_loader.py  exceptions.py  execution_engine.py  init.py  llm_client.py  logging_config.py  orchestrator.py  pro_agent.py  provider_registry.py  rate_limiter.py  router.py  router_adapter.py  session_store.py  tool_call_parser.py  types.py  types_action.py  types_provider_metadata.py  types_tool.py  types_tool_call.py  types_tool_result.py
mfdballm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: git-updater.py  make-dump.py  make-dump.sh
tests/: action_model_test.py  action_parser_test.py  action_protocol_test.py  agent_loop_test.py  agent_tool_loop_test.py  execution_engine_test.py  execution_engine_tool_loop_test.py  (+33 more)
(+105 files in other folders)
