[project]
name = "mfdballm"
version = "0.1.0"
description = "MFDBA Global LLM Engine"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0"
]

[project.scripts]
mfdballm = "mfdballm.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mfdballm*"]
