[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "mfdballm"
version = "0.1.0"
description = "MFDBA Global LLM Engine"
requires-python = ">=3.10"

dependencies = [
    "httpx>=0.27.0",
    "aiohttp>=3.9",
    "requests>=2.31.0"
]


[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23"
]


[project.scripts]
mfdballm = "mfdballm.cli:main"


[tool.setuptools.packages.find]
where = ["."]
include = ["mfdballm*"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
